@@ -15,6 +15,14 @@ User Interface
 - `Flat' buttons keep their border after having been activated.
 
 
+Debuggers and Languages
+-----------------------
+
+- Using JDB, `File->Open Class' no longer searches the class path for
+  .java source files; instead, it searches for .class files and
+  returns all classes with accessible .java sources.
+
+
 Data exploration
 ----------------
 
